:art:modify startup.sh